[package]
name = "burry-oracle-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "burry_oracle_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
getrandom = { version = "0.2.2", features = ["custom"] }
solana-program = "=1.14.17"
switchboard-v2 = "0.1.23"
anchor-spl = "0.27.0"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
bytemuck = "1.13.1"
